<resources>
    <string name="app_name" translatable="false">Firstapp</string>
    <string name="enter_name">enter name</string>
    <string name="submit" translatable="false">submit</string>
    <string name="cancel" translatable="false">cancel</string>
    <string name="textview" translatable="false">Username</string>
    <string name="login" translatable="false">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="select_image" translatable="false">SELECT IMAGE</string>
    <string name="profile_picture" translatable="false">Profile picture</string>
    <string name="helpingMessageOne" translatable="false">Next time you will see your last alarm here</string>
    <string name="helpingMessageTwo" translatable="false">Set the alarm in the future with the old settings</string>
    <string name="mon" translatable="false">M</string>
    <string name="tue" translatable="false">T</string>
    <string name="wed" translatable="false">W</string>
    <string name="thu" translatable="false">TH</string>
    <string name="fri" translatable="false">F</string>
    <string name="sat" translatable="false">SA</string>
    <string name="sun" translatable="false">SU</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="time_will_be_shown_here" translatable="false">Time: </string>
    <string name="set_alarm" translatable="false">Set Alarm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="showdata" translatable="false">Show Data</string>
    <string name="count">set timer</string>
    <string name="toast">Toast</string>
    <string name="enter_time_in_seconds">enter time in seconds</string>
    <string name="download_file_button">Download file</string>
    <string name="instructions">instructions</string>
    <string name="msg_subscribed">You are subscribed to getting weather updates!</string>
    <string name="msg_subscribe_failed">Sorry, failed to subscribe to weather updates. Please check with your administrator!</string>
    <string name="pref_sum_social">Recommendations for people to contact based on your order history</string>
    <string name="channel_name">service demo</string>
    <string name="channel_description">channel description for service demo</string>
    <string name="pref_title_social">Enable social recommendations</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_preferences">PreferencesActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Never</string>
    <string name="notes">notes</string>
    <string name="title">Title</string>
    <string name="text">text</string>
    <string name="enter_notes">enter notes</string>
    <string name="enter_title">enter title</string>
    <string name="retreived">Retreived</string>
    <string name="retreive">Retreive</string>
    <string name="commit">Commit</string>
    <string name="remember_password">remember password</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_word">enter word</string>
    <string name="commitroom">commitRoom</string>
</resources>