<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:title="Flight Preferences">
            <CheckBoxPreference
                android:title="Wake for meals"
            />
            <EditTextPreference
                android:title="Favorite city"
                android:key="fav_city"
            />
        </PreferenceCategory>

    <ListPreference
        android:defaultValue="-1"
        android:key="add_friends_key"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:title="@string/pref_title_add_friends_to_messages" />


    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:defaultValue="@string/pref_default_display_name"
        android:title="@string/pref_title_display_name" />


    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/pref_title_social"
        android:key="switch"
        android:summary="@string/pref_sum_social" />

</PreferenceScreen>